--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
           <span class="pontos" id="computador-pontuou">0</span>
         </strong>
       </div>
+
+      <section class="options-container">
+        <h2>Choose an option:</h2>
+        <div class="btn-container">
+          <button id="rock-btn" class="btn">Rock</button>
+          <button id="paper-btn" class="btn">Paper</button>
+          <button id="scissors-btn" class="btn">Scissors</button>
+        </div>
+      </section>
+
       <section>
         <div class="resultado-container">
           <p id="resultado-msg"></p>
