--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
           Você pontuou: <span class="pontos" id="jogador-pontuou">0</span>
         </strong>
         <strong>
-          Computador pontuou:
+          Pontos do Computador:
           <span class="pontos" id="computador-pontuou">0</span>
         </strong>
       </div>
 
-      <section class="options-container">
-        <h2>Choose an option:</h2>
+      <section class="opcao-container">
+        <h2>Escolha uma opção:</h2>
         <div class="btn-container">
-          <button id="rock-btn" class="btn">Rock</button>
-          <button id="paper-btn" class="btn">Paper</button>
-          <button id="scissors-btn" class="btn">Scissors</button>
+          <button id="pedra-btn" class="btn">Pedra</button>
+          <button id="papel-btn" class="btn">Papel</button>
+          <button id="tesoura-btn" class="btn">Tesoura</button>
         </div>
       </section>
 
